@@ -25,6 +25,7 @@ Michael Vhrel (Artifex)
 Robin Watts (Artifex)
 Michal Cihar 
 Daniel Kaneider 
+Mateusz Jurczyk (Google)
 
 Special Thanks 
 --------------
