@@ -72,3 +72,4 @@ Added a new plug-in type
 Internal stage structs are now accessible through plug-in API
 Fixed a bug on ending zero when saving a IT8 to memory
 Fixed a bug on IT8 reading of negative numbers.
+Increased security checks, thanks to Mateusz Jurczyk, from Google.
